Refactored API a bit
